# ttb-labeling

./: .gitignore  AGENTS.md  README.md  pyproject.toml
context/: TTB-2018-0007-1157.md  TTB-2022-00841-87-FR-7526.md  ds-labeling-checklist.txt  grape-variety-designations.txt  malt-beverage-class-types.txt  spirits-class-types.txt  title-27-part-4.html  wine-labeling-checklist.txt
scripts/: collect-cola-samples.py  generate-synthetic-cola-fixtures.py  run_codex_worktrees.sh
src/cola_label_verification/: __init__.py  gradio_app.py  models.py  taxonomy.py  text.py  vlm.py
tests/: __init__.py  conftest.py  test_alcohol_content_extraction.py  test_class_type_extraction.py  test_field_of_vision.py  test_models.py  test_net_contents_extraction.py  test_ocr_integration.py  test_rules_integration.py  test_vlm.py  test_warning_text.py
tests/fixtures/: run_results.json  search_2025-01-11_2025-01-24.html  search_2025-02-03_2025-02-18.html  search_2025-02-05_2025-02-15.html  search_2025-02-09_2025-02-20.html  search_2025-05-18_2025-06-03.html  search_2025-05-23_2025-06-08.html  search_2025-06-12_2025-06-15.html  search_2025-06-30_2025-07-17.html  search_2025-07-04_2025-07-19.html  search_2025-07-06_2025-07-23.html  search_2025-07-21_2025-07-30.html  search_2025-08-20_2025-09-08.html  search_2025-09-08_2025-09-26.html  search_2025-10-12_2025-10-31.html  search_2025-10-22_2025-10-30.html  state.json
tests/ocr/: __init__.py  test_clients.py  test_image_variants.py  test_lines.py
tests/rules/: __init__.py  test_alcohol_content_presence.py  test_appellation_presence.py  test_beverage_type_presence.py  test_brand_name_presence.py  test_carmine_presence.py  test_class_type_presence.py  test_coloring_materials_presence.py  test_commodity_statement_distilled_from_presence.py  test_commodity_statement_neutral_spirits_presence.py  (+18 more)
(+333 files in other folders)
